<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textmsg"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="50dp" />

        <EditText
            android:layout_width="345dp"
            android:layout_height="215dp"
            android:id="@+id/editText"
            android:layout_gravity="center"
            android:textIsSelectable="false"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginBottom="30dp"
            android:hint="@string/enterurmsghere" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/button2"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="30dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginRight="30dp" />

        <ImageButton
            android:layout_width="91dp"
            android:layout_height="82dp"
            android:id="@+id/imageButton"
            android:layout_gravity="end|bottom"
            android:src="@android:drawable/ic_btn_speak_now"
            android:layout_marginBottom="80dp"
            android:layout_marginEnd="27dp"
            tools:ignore="UnusedAttribute"
            android:layout_marginRight="27dp"
            android:contentDescription="@string/micicon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Oryoucanrecordyourvoice"
            android:id="@+id/textView2"
            android:layout_gravity="start|bottom"
            android:layout_marginBottom="111dp"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="19sp"
            android:layout_marginLeft="30dp" />

    </FrameLayout>
</LinearLayout>