<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical"
    tools:context=".SendMsgActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="#6d96b2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textmsg"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="50dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_gravity="center|center"
            android:ems="10"
            android:id="@+id/editText"
            android:hint="@string/yswttth"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="100dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="18sp"
            android:onClick="send" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton10"
            android:layout_gravity="start|top"
            android:src="@drawable/hhh"
            android:background="#6d96b2"
            android:onClick="back"
            android:contentDescription="back button"
            android:layout_margin="10dp" />

    </FrameLayout>
</LinearLayout>