<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical"
    tools:context=".SendVoicActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textmsg"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="50dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/button2"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="18sp"
            android:onClick="send" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton11"
            android:layout_gravity="start|top"
            android:src="@drawable/hhh"
            android:background="@android:color/transparent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:onClick="back" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_gravity="center|center"
            android:ems="10"
            android:id="@+id/editText"
            android:hint="@string/yswttth"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:text="@string/Oryoucanrecordyourvoice"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView2"
            android:layout_gravity="start|bottom"
            android:layout_marginBottom="111dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:fontFamily="sans-serif"
            android:textSize="18sp" />

        <ImageButton
            android:layout_width="91dp"
            android:layout_height="82dp"
            android:id="@+id/imageButton"
            android:layout_gravity="end|bottom"
            android:src="@android:drawable/ic_btn_speak_now"
            android:backgroundTint="@color/abc_background_cache_hint_selector_material_light"
            android:layout_marginBottom="80dp"
            android:layout_marginEnd="27dp"
            android:layout_marginRight="27dp"
            android:onClick="speechtotextClick"/>

    </FrameLayout>
</LinearLayout>