<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical"
    tools:context=".ContactUsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="#6d96b2"
        tools:ignore="UselessParent"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/contact_us"
            android:id="@+id/textView7"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="50dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="#aa0909" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:id="@+id/imageButton9"
            android:layout_gravity="start|top"
            android:src="@drawable/hhh"
            android:background="#6d96b2"
            android:layout_marginTop="10dp"
            android:onClick="back"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/imageButton16"
            android:src="@drawable/twitter"
            android:scaleX="1"
            android:scaleY="1"
            android:layout_marginTop="130dp"
            android:elevation="1dp"
            android:onClick="twitter"
            android:background="#6d96b2" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/imageButton15"
            android:src="@drawable/facebook"
            android:contentDescription="@string/twitter"
            android:layout_marginTop="270dp"
            android:onClick="facebook"
            android:background="#6d96b2" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/gmail"
            android:id="@+id/imageButton18"
            android:layout_marginTop="400dp"
            android:background="#6d96b2"
            android:onClick="gmail" />

    </FrameLayout>
</LinearLayout>